--- a/Dijkstra/Dijkstra/Dijkstra.csproj
+++ b/Dijkstra/Dijkstra/Dijkstra.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Edge.cs" />
+    <Compile Include="Node.cs" />
+    <Compile Include="NodeInformation.cs" />
+    <Compile Include="NodeState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
